@@ -10,7 +10,7 @@ libffi
 
 <b>libffi-1.20</b> was released on October 5, 1998. You can ftp it
 from <a
-href="ftp://ftp.cygnus.com:/pub/green/libffi-1.20.tar.gz">ftp.cygnus.com:/pub/green/libffi-1.20.tar.gz</a>.
+href="ftp://sourceware.cygnus.com:/pub/libffi/libffi-1.20.tar.gz">sourceware.cygnus.com:/pub/libffi/libffi-1.20.tar.gz</a>.
 However, newer code is available.  See below for details.
 
 <p>
@@ -79,7 +79,7 @@ that some will be easy (x86 NetBSD), and others will be more difficult
 
 <h2>How to get it</h2>
 
-You can download the latest version from <a href="ftp://ftp.cygnus.com/pub/green/">ftp.cygnus.com:/pub/green/</a>.  
+You can download the latest version from <a href="ftp://sourceware.cygnus.com/pub/libffi/">sourceware.cygnus.com:/pub/libffi/</a>.  
 
 <p>
 
@@ -111,7 +111,7 @@ available.
 
 <p>To subscribe to the <code>libffi-announce</code> mailing list, enter your
 e-mail address:
-<form method="get" action="/cgi-bin/subscribe">
+<form method="get" action="/cgi-bin/subscribe-sourceware">
   <input type="hidden" name="listname" value="libffi-announce">
   <input type="text" name="username" size="16"> <input type="Submit" name="submi
 t" value="Sign me up!">
@@ -119,7 +119,7 @@ t" value="Sign me up!">
 
 <br>To subscribe to the <code>libffi-discuss</code> mailing list, enter your
 e-mail address:
-<form method="get" action="/cgi-bin/subscribe">
+<form method="get" action="/cgi-bin/subscribe-sourceware">
   <input type="hidden" name="listname" value="libffi-discuss">
   <input type="text" name="username" size="16"> <input type="Submit" name="submi
 t" value="Sign me up!">
